--- a/TechnoholicBackend/templates/index.html
+++ b/TechnoholicBackend/templates/index.html
@@ -120,7 +120,7 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, dolorem cupiditate. Dolore quae ut possimus
             reiciendis, nostrum, dolorem minus excepturi aliquam saepe amet in totam fugiat. Unde ad nisi fuga commodi
             cum omnis odit?</p>
-        <a href="./links.html"> <button class="btn">Continue</button></a>
+        <a href="{%url 'links'%}"> <button class="btn">Continue</button></a>
     </section>
 
 
